feat: Add GET, POST, PUT, DELETE endpoints for terminal & add terminal endpoint in swagger open api
