# routes/index.js
@@ -6,6 +6,7 @@ const User = require("./user.routes");
 const UserProfile = require("./userProfile.routes");
 const Notification = require("./notification.routes");
 const Airport = require("./airport.routes");
+const Terminal = require("./terminal.routes");
 const Airline = require("./airline.routes");
 const Flight = require("./flight.routes");
 
@@ -18,6 +19,7 @@ router.use("/api/v1/users", User);
 router.use("/api/v1/user-profiles", UserProfile);
 router.use("/api/v1/notifications", Notification);
 router.use("/api/v1/airports", Airport);
+router.use("/api/v1/terminals", Terminal);
 router.use("/api/v1/airlines", Airline);
 router.use("/api/v1/flights", Flight);
 
